Skip to content

I can't add more videos to playlist

Problem description:

  • I am trying to add a second video to my playlist, and it doesn't work. In short, I can add only one video to my playlist.
  • UPDATE: This issue was re-opened, because drag'n'dropping media from playqueue to playlist isn't working.

Expected results:

  • It should work normal (I can add multiple videos to my playlist).

Other details:

  • I'm tried to add video to playlist with MKV codec.
  • I don't think the playlist sidebar, I think the “Playlists” tab under the “Video” tab.
  • I'm using VLC 4.0 on Windows 11 22621.1194 (64-bit).
Edited by Aleksandra Krajčovičová
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information