qml: fix appending to playlist

fixes #27826